# droidcam-linux-client

./: .gitignore  .gresource.xml  Makefile  README-DKMS.md  README-FreeBSD.md  README.md  droidcam.desktop  install-client  install-dkms  install-sound  install-video  install.common  uninstall  uninstall-dkms
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
linux/: .gitignore  .gresource.xml  CMakeLists.txt  LICENCE  Makefile  README  README-DKMS.md  README.md  install  install-dkms  install-sound  install.common  install_shell_func_and_conf  uninstall  uninstall-dkms
linux/ffmpeg/: configure
linux/src/: adb.c  av.c  common.h  connection.c  connection.h  decoder.c  decoder.h  decoder_snd.c  decoder_v4l2.c  droidcam-cli.c  droidcam.c  icon.h  queue.h  resources.c  settings.c  settings.h  usb.c
linux/v4l2loopback/: Makefile  README-DKMS.md  dkms.conf  test-mmap.c  test.c  v4l2loopback-dc.c
linux/webcam/: Makefile  droidcam_v4l.c
src/: av.c  common.h  connection.c  connection.h  decoder.c  decoder.h  decoder_snd.c  decoder_v4l2.c  droidcam-cli.c  droidcam.c  fourcc.out  queue.c  queue.h  resources.c  settings.c  settings.h  usb.c
v4l2loopback/: Makefile  test.c  v4l2loopback-dc.c
